list files added
